fixed extra spacing

--- a/src/global.css
+++ b/src/global.css
@@ -71,5 +71,5 @@
 
 html,
 body {
-  @apply h-full;
+  @apply h-full w-full;
 }
